<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_content">0</string>
    <string name="order">Order</string>
    <string name="price">price</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="topping">Topping</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="customer_name">Name</string>
    <!--
      Name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the
      user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <!--
       Subject line for the order summary email. It will be in the format of
       "Just Java order for Amy" where Amy is the user's name. [CHAR LIMIT=NONE]
     -->
    <string name="order_summary_email_subject">Just Java order for <xliff:g id="name" example="Amy">%s</xliff:g></string>
</resources>
